You can now view agenda for a given day

--- a/AAU CalTests/AAU CalTests.csproj
+++ b/AAU CalTests/AAU CalTests.csproj
@@ -51,7 +51,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="CalScraper\CalScraperTests.cs" />
+    <Compile Include="CalScraperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
