--- a/AAU Cal/AAU Cal.csproj
+++ b/AAU Cal/AAU Cal.csproj
@@ -92,7 +92,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CalScraper\CalScraper.cs" />
+    <Compile Include="CalScraper.cs" />
     <Compile Include="Components\Agenda.xaml.cs">
       <DependentUpon>Agenda.xaml</DependentUpon>
     </Compile>
