--- a/AAU CalTests/AAU CalTests.csproj
+++ b/AAU CalTests/AAU CalTests.csproj
@@ -65,6 +65,11 @@
       <Name>AAU Cal</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="assets\testPage.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
